--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NataDent/my-resume.git"
+    "url": "git+https://github.com/NataDent/my-resume"
   },
   "keywords": [],
   "author": "Nataliia Cherkashyna <cherkashyna.n@gmail.com>",
